# HainTag

./: .gitignore  AITagGenerator.spec  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HainTag-mac.spec  README.en.md  README.hein.md  README.md  ROADMAP.md  build-macos.sh  pyproject.toml  requirements.txt  version_info.py
.claude/: settings.json
.claude/rules/: ui-design.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.learnings/: LEARNINGS.md
docs/: macos-port-plan.md
native_app/: DEVELOPMENT_MEMORY.md  DEV_NOTES.md  __init__.py  __main__.py  _version.py  api_client.py  app_paths.py  error_reporting.py  file_dialogs.py  file_filters.py  font_loader.py  i18n.py  llm_tagger_logic.py  logic.py  main.py  models.py  python_env.py  secret_store.py  tag_dictionary.py  tagger.py  tagger_subprocess.py  theme.py  ui_tokens.py  updater.py  window.py
native_app/metadata/: __init__.py  models.py  reader.py  thumb_cache.py  writer.py
native_app/resources/: default_examples.json  default_prompts.json  icon.icns
native_app/storage/: __init__.py  _config_bundle.py  _error_reports.py  _examples.py  _facade.py  _fonts.py  _hints.py  _history.py  _library.py  _likes.py  _paths.py  _prompts.py  _state.py
native_app/widgets/: DEV_NOTES.md  __init__.py  (+28 more)
scripts/: extract_changelog.py  gen_version_info.py  verify_bundle.py
tests/: test_i18n.py  test_llm_tagger_logic.py  test_logic.py  test_metadata.py  test_models.py  test_secret_storage.py  test_tag_dictionary.py  test_updater.py
(+8 files in other folders)
